# Captain_John

./: .dockerignore  .gitattributes  .gitignore  README.md  aihead.py  compose.yaml  digitrain.py  errlogs.json  gpu_monitor.cpp  list.txt  listmaker.py  main.py  main_init.py  neon_button.py  panel.py  requirements.txt  run_john.py  speechhead.py  stout_head.py  testing.py  texthead.py  ttshead.py  wsgi.py
AI_heads/: ASR_head.py  TTS_head.py  cleaned_data.json  distilbert_router_model.pth  label_encoder.pkl  process_data.py  router_head.py  speech_head.py  summarizer.py  train_router.py
assets/: idea_board.txt  medialist.txt
audio/: audioplayer.py  microphone.py
elements/: glitchwidget.py  ratio_widgets.py  status_button.py  transparent_img.py
fonts/: font.txt  font_check.py
launcher/: Cargo.toml
launcher/src/: app.rs  colors.rs  drawing.rs  main.rs  status.rs
launcher/src/ui/: bubble.rs  mod.rs  panel.rs
raspberry_code/: chatbots.py  raspberry.txt  requirements.txt  server.py  system_info.db  wsgi.py
raspberry_code/server/: database.py  llama.py  logs.db  main.py
raspberry_code/server/static/: script.js  style.css
raspberry_code/server/templates/: index.html
rust_console/: Cargo.toml  console.rs  index.html  script.js
rust_console/src/: main.rs
rust_console/static/: style.css
science_news/: gather_papers.py
tasks/: geohelper.html  geoinit.js  mirror.py  request_worker.py  scrape.py  spotifyauth.py  timer.py  usage_worker.py  weather_api.py
